--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head lang="en">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1">
   <meta name="google-site-verification" content="QWNFze72_nXr0MBbdA4s9Zc3CyjlnyRB8WeBt-21wKU" />
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/icon" href="favicon.ico">
@@ -13,14 +13,7 @@
   @font-face {
     font-display: block;
     font-family: Forum;
-    src: "/Fonts/Forum.ttf")
-  }
-
-  @font-face {
-    font-display: fallback;
-    font-family: Roboto;
-    font-weight: 600;
-    src: url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/6e9caeeafb1f3491be3e32744bc30440.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/71501f0d8d5aa95960f6475d5487d4c2.woff) format("woff")
+    src: "/Fonts/Forum.ttf"
   }
 </style>
 
@@ -53,35 +46,13 @@ Your browser does not support the audio element.
 
   
 <a href="mailto:ivandogwood@pm.me?subject=Booking">
-<img style="display:block; margin:auto; width:80px;" src="mail2.png"></img>
+<img alt=ivan_dogwood_booking style="display:block; margin:auto; width:80px;" src="mail2.png"></img>
 </a>
 
 <a href="https://instagram.com/ivandogwood">
-<img style="padding-top:20px; display:block; margin:auto;width:80px;" src="instagram 2.png"></img>
+<img alt=ivan_dogwood_instagram style="padding-top:20px; display:block; margin:auto;width:80px;" src="instagram 2.png"></img>
 </a>
 
-<script>
-  window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
-  window.LOCALE = 'en';
-  window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
-
-  window.REQUIRED_ERROR_MESSAGE = "bruh...gotta add your email address ";
-
-  window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
-
-
-
-
-  window.translation = {
-    common: {
-      selectedList: '{quantity} list selected',
-      selectedLists: '{quantity} lists selected'
-    }
-  };
-
-  var AUTOHIDE = Boolean(1);
-</script>
-<script defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
 
 </body>
 </html>
