--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Your browser does not support the audio element.
 
 
 <a href="outlawkaraoke.html">
-  <h3 style="display:block; margin:auto; text-align:center; font-size:33px; padding:33px; font-family:forum; color:lavenderblush;">Outlaw Karaoke</h3>
+  <h3 style="display:block; margin:auto; text-align:center; font-size:33px; padding:33px; font-family:Forum; color:lavenderblush;">Outlaw Karaoke</h3>
 </a>
 
 
