--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
   <link rel="icon" type="image/icon" href="favicon.ico">
   <title>The Outlaw Red Ivan Dogwood</title>
 
-<style>
-  @font-face {
-    font-display: block;
-    font-family: Forum;
-    src: "/Fonts/Forum.ttf"
-  }
-</style>
 
+<link href="https://fonts.googleapis.com/css?family=Forum" rel="stylesheet">
 
 </head>
   <!-- 
