--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -10,11 +10,6 @@
 
 <style>
   background-color:black;
-  @font-face {
-    font-display: block;
-    font-family: Roboto;
-    src: url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/7529907e9eaf8ebb5220c5f9850e3811.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/25c678feafdc175a70922a116c9be3e7.woff) format("woff")
-  }
 </style>
 
 </head>
@@ -25,14 +20,17 @@
  --->
 <body style="background-color:black">
   <a href="index.html">
-<img src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
+<img alt=Ivan_Dogwood src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
   </a>
 
 <a href="https://cash.app/$ivandogwood">
-<img style="padding-top:20px; display:block; margin:auto;width:210px;" src="82366345-18F7-4A2B-8747-36AB81FDCFF1.jpeg"></img>
+<img alt=ivan_dogwood_cashapp style="padding-top:20px; display:block; margin:auto;width:210px;" src="82366345-18F7-4A2B-8747-36AB81FDCFF1.jpeg"></img>
 </a>
 
-  <!--- Karaoke Song List --->
+
+
+  
+  <!--- Karaoke Songs List --->
 
   <a href="/Lyrics/likearollingstone.html">
     <p style="display:block; margin:auto; padding-top: 33px; font-family:times new roman;font-size: 18px; color:white;">Like A Rolling Stone - Bob Dylan</p>
@@ -42,12 +40,24 @@
     <p style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px; color:white;">Girls Just Wanna Have Fun - Cyndi Lauper</p>
   </a>
 
+      <a href="/Lyrics/igotafeeling.html">
+    <p style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px; color:white;">I Got A Feeling - The Beatles</p>
+  </a>
+
+
+
+
+
+
+
+
+  
 <a style="display:block; margin:auto;text-align:center; color:darkorange;" href="mailto:ivandogwood@pm.me?subject=Karaoke Request">
-<img src="mail2.png" style="padding-top:33px;display:block; text-align:center; margin:auto; width:80px; color:white;">Request a song to be added to list</img>
+<img alt=ivan_dogwood_email src="mail2.png" style="padding-top:33px;display:block; text-align:center; margin:auto; width:80px; color:white;">Request a song to be added to list</img>
 </a>
 
 <a href="https://instagram.com/ivandogwood">
-<img style="padding-top:20px; display:block; margin:auto;width:80px;" src="instagram 2.png"></img>
+<img alt=ivan_dogwood_instagram style="padding-top:20px; display:block; margin:auto;width:80px;" src="instagram 2.png"></img>
 </a>
 
 </body>
