--- a/Lyrics/igotafeeling.html
+++ b/Lyrics/igotafeeling.html
@@ -1,93 +1,139 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>I Got A Feeling</title>
+  <title>I've Got a Feeling</title>
 </head>
-<body style="background-color:black; color:aliceblue;">
-  <h1>I Got A Feeling</h1>
+<body style="background-color:black; color:aliceblue; font-size:large;">
+  <h1>I've Got a Feeling</h1>
   <p>
     <b>Verse 1</b>
-    I got a feeling
-    That tonight's gonna be a good night
-    That tonight's gonna be a good night
-    (Yeah)
-    We're gonna party
-    Like it's 1999
-    (Yeah, yeah, yeah)
-    We're gonna make it
-    If we try
-    (Yeah, yeah, yeah)
-    We're gonna shout it
-    From the rooftops
-    (Yeah, yeah, yeah)
-    We're gonna feel it
-    In our bones
-    (Yeah, yeah, yeah)
-    We're gonna live it
-    Like it's our last night
-    (Yeah, yeah, yeah)
-  </p>
-  <p>
+    <br>
+    I've got a feeling
+    <br>
+    A feeling deep inside
+    <br>
+    Oh yeah
+    <br>
+    Oh yeah, that's right
+    <br>
+    I've got a feeling
+    <br>
+    A feeling I can't hide
+    <br>
+    Oh no, no
+    <br>
+    Oh no
+    <br>
+    Oh no
+    <br>
     <b>Chorus</b>
-    We're gonna dance
-    Till we can't dance no more
-    (Yeah, yeah, yeah)
-    We're gonna sing
-    Till our voices give out
-    (Yeah, yeah, yeah)
-    We're gonna shout
-    Till the morning comes
-    (Yeah, yeah, yeah)
-    We're gonna make it
-    If we try
-  </p>
-  <p>
+    <br>
+    Yeah, yeah
+    <br>
+    I've got a feeling, yeah
+    <br>
+    Oh please believe me
+    <br>
     <b>Verse 2</b>
-    I feel stressed out, I wanna let it go
-    I feel the power, like I'm gonna explode
-    I'm gonna let it all out
-    I'm gonna feel alive
-    I'm gonna dance all night long
-    And I'm gonna sing my heart out
-  </p>
-  <p>
+    <br>
+    I'd hate to miss the train
+    <br>
+    Oh yeah, yeah
+    <br>
+    Oh yeah
+    <br>
+    And if you leave me
+    <br>
+    I won't be late again
+    <br>
+    Oh no
+    <br>
+    Oh no
+    <br>
+    Oh no
+    <br>
     <b>Chorus</b>
-    We're gonna dance
-    Till we can't dance no more
-    (Yeah, yeah, yeah)
-    We're gonna sing
-    Till our voices give out
-    (Yeah, yeah, yeah)
-    We're gonna shout
-    Till the morning comes
-    (Yeah, yeah, yeah)
-    We're gonna make it
-    If we try
-  </p>
-  <p>
+    <br>
+    Yeah, yeah
+    <br>
+    I've got a feeling, yeah
+    <br>
+    <b>Verse 3</b>
+    <br>
+    I've got a feeling
+    <br>
+    All these years, I've been wanderin' around
+    <br>
+    Wonderin' how come nobody told me
+    <br>
+    All that I been lookin' for was somebody who looked like you
+    <br>
+    Ooh, I've got a feeling
+    <br>
+    <b>Chorus</b>
+    <br>
+    That keeps me on my toes
+    <br>
+    Oh yeah
+    <br>
+    Oh yeah
+    <br>
+    I've got a feeling
+    <br>
+    <b>Verse 4</b>
+    <br>
+    I think that everybody knows
+    <br>
+    <b>Chorus</b>
+    <br>
     <b>Bridge</b>
-    We're gonna make it
-    If we try
-    We're gonna shout it
-    From the rooftops
-    We're gonna feel it
-    In our bones
-    We're gonna live it
-    Like it's our last night
-  </p>
-  <p>
+    <br>
+    Everybody had a hard year
+    <br>
+    Everybody had a good time
+    <br>
+    Everybody had a wet dream
+    <br>
+    Everybody saw the sunshine
+    <br>
     <b>Chorus</b>
-    We're gonna dance
-    Till we can't dance no more
-    (Yeah, yeah, yeah)
-    We're gonna sing
-    Till our voices give out
-    (Yeah, yeah, yeah)
-    We're gonna shout
-    Till the morning comes
-    (Yeah, yeah, yeah)
-    We're gonna make it
-    If we try
+    <br>
+    <b>Outro</b>
+    <br>
+    Yeah, yeah
+    <br>
+    Woo
+    <br>
+    <b>I've got a feeling</b>
+    <br>
+    A feeling deep inside
+    <br>
+    <b>Oh yeah</b>
+    <br>
+    Oh yeah
+    <br>
+    <b>I've got a feeling</b>
+    <br>
+    A feeling I can't hide
+    <br>
+    <b>Oh no</b>
+    <br>
+    <b>Oh no</b>
+    <br>
+    <b>Oh no</b>
+    <br>
+    Yeah, yeah
+    <br>
+    <b>I've got a feeling</b>
+    <br>
+    <b>I've got a feeling</b>
+    <br>
+    <b>I've got a feeling</b>
+    <br>
+    <b>Yeah, yeah, yeah, yeah</b>
+    <br>
+    <b>Oh my soul, so hard</b>
+    <br>
   </p>
 </body>
 </html>
