--- a/Lyrics/igotafeeling.html
+++ b/Lyrics/igotafeeling.html
@@ -7,7 +7,7 @@
   <h1>I've Got a Feeling</h1>
   <p>
     <b>Verse 1</b>
-    <br>
+    <br><br>
     I've got a feeling
     <br>
     A feeling deep inside
@@ -31,10 +31,8 @@
     Yeah, yeah
     <br>
     I've got a feeling, yeah
-    <br>
+    <br><b>Verse 2</b><br>
     Oh please believe me
-    <br>
-    <b>Verse 2</b>
     <br>
     I'd hate to miss the train
     <br>
@@ -58,19 +56,15 @@
     <br>
     I've got a feeling, yeah
     <br>
-    <b>Verse 3</b>
-    <br>
     I've got a feeling
-    <br>
+    <br> <b>Bridge</b>
     All these years, I've been wanderin' around
     <br>
     Wonderin' how come nobody told me
     <br>
     All that I been lookin' for was somebody who looked like you
-    <br>
-    Ooh, I've got a feeling
-    <br>
-    <b>Chorus</b>
+      <b>Verse 3</b><br>
+    Ooh, I've got a feelin
     <br>
     That keeps me on my toes
     <br>
@@ -86,7 +80,6 @@
     <br>
     <b>Chorus</b>
     <br>
-    <b>Bridge</b>
     <br>
     Everybody had a hard year
     <br>
