--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Your browser does not support the audio element.
 
 
 <a href="outlawkaraoke.html">
-  <h3 style="display:block; margin:auto; text-align:center; font-size:33px; padding:33px; font-family:Academy Engraved; color:lavenderblush;">Cashapp Karaoke</h3>
+  <h3 style="display:block; margin:auto; text-align:center; font-size:33px; padding:33px; font-family:Academy Engraved; color:lavenderblush;">CashApp Karaoke</h3>
 </a>
 
 
