--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <style>
       @font-face { font-family: academy; src: url('Fonts/AcademyEngravedLetPlain.ttf'); } 
-      h1 {
+      h3 {
+         font-family: academy
+      },
+    p {
          font-family: academy
       }
     </style>
@@ -38,7 +41,7 @@ Your browser does not support the audio element.
 
 
 <a href="outlawkaraoke.html">
-  <h3 style="display:block; margin:auto; text-align:center; font-size:33px; padding:33px; font-family:Academy Engraved LET; color:lavenderblush;">CashApp Karaoke</h3>
+  <h3 style="display:block; margin:auto; text-align:center; font-size:27px; padding:33px; font-family:academy; color:lavenderblush;">CashApp Karaoke</h3>
 </a>
 
 
