--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
   <link rel="icon" type="image/icon" href="favicon.ico">
   <title>The Outlaw Red Ivan Dogwood</title>
 
+<link href="https://fonts.cdnfonts.com/css/academy-engraved-let" rel="stylesheet">
 
-<style>
-      @font-face { font-family: academy; src: url('AcademyEngravedLetPlain.ttf'); } 
-      h3 {font-family: academy},
-       p {font-family: academy}
-    </style>
 </head>
   <!-- 
   <link rel="stylesheet" href="css/themes/slim.css">
@@ -37,7 +33,7 @@ Your browser does not support the audio element.
 
 
 <a href="outlawkaraoke.html">
-  <h3 style="display:block; margin:auto; text-align:center; font-size:27px; padding:33px; font-family:academy; color:lavenderblush;">CashApp Karaoke</h3>
+  <h3 style="display:block; margin:auto; text-align:center; font-size:27px; padding:33px; font-family:academy engraved let; color:lavenderblush;">CashApp Karaoke</h3>
 </a>
 
 
