--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -52,6 +52,9 @@
     <p style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px; color:white;">Dirty Woman - Pink Floyd</p>
      </a>
 
+  <a href="/Lyrics/hereigoagainonmyown.html">
+    <p style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px; color:white;">Here I Go Again On My Own - Whitesnake</p>
+     </a>
 
 
 
