--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -31,30 +31,30 @@
 
   
   <!--- Karaoke Songs List --->
-<div style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px; color:white;" >
+<div style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px;" >
   
      <a href="/Lyrics/likearollingstone.html">
-    <p style="padding-top: 33px">Like A Rolling Stone - Bob Dylan</p>
+    <p style="padding-top: 33px; color:white;">Like A Rolling Stone - Bob Dylan</p>
     </a>
 
      <a href="/Lyrics/girlsjustwannahavefun.html">
-    <p>Girls Just Wanna Have Fun - Cyndi Lauper</p>
+    <p style="color:white;">Girls Just Wanna Have Fun - Cyndi Lauper</p>
     </a>
 
       <a href="/Lyrics/igotafeeling.html">
-    <p>I Got A Feeling - The Beatles</p>
+   <p style="color:white;">I Got A Feeling - The Beatles</p>
      </a>
   
       <a href="/Lyrics/yougotlucky.html">
-    <p>You Got Lucky - Tom Petty & The Heartbreakers</p>
+     <p style="color:white;">You Got Lucky - Tom Petty & The Heartbreakers</p>
      </a>
   
       <a href="/Lyrics/dirtywoman.html">
-    <p>Dirty Woman - Pink Floyd</p>
+     <p style="color:white;">Dirty Woman - Pink Floyd</p>
      </a>
 
   <a href="/Lyrics/hereigoagainonmyown.html">
-    <p>Here I Go Again On My Own - Whitesnake</p>
+     <p style="color:white;">Here I Go Again On My Own - Whitesnake</p>
      </a>
 
 
