--- a/Lyrics/hereigoagainonmyown.html
+++ b/Lyrics/hereigoagainonmyown.html
@@ -3,7 +3,7 @@
 <head>
 <title>Here I Go Again</title>
 </head>
-<body style=""background-color:black;color:aliceblue;font-size:large;">
+<body style="background-color:black;color:aliceblue;font-size:large;">
 <h1>Here I Go Again</h1>
 <p>
 I don't know where I'm going<br>
