--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>The Outlaw Red Ivan Dogwood</title>
 
 <link href="https://fonts.cdnfonts.com/css/academy-engraved-let" rel="stylesheet">
+<link href="https://db.onlinewebfonts.com/c/f7155a90eafcde757701e3f9adcd8113?family=American+Typewriter+ITCW01+Lt" rel="stylesheet">
 
 </head>
   <!-- 
@@ -19,7 +20,7 @@
  --->
 <body style="background-color:black">
 <img alt="Ivan Dogwood" src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
-<p style="margin-top:42px;text-align: center;color:white;font-family:americantypewriter;font-size:large;"> Your own sophisticated low brow blues lick-laden, fuzz-covered, Appalachian soul-powered, original rock & roll guitar/drums duo. <br><br> Award-winning songwriting. </p>
+<p style="margin-top:42px;text-align: center;color:white;font-family:American Typewriter ITCW01 Lt;font-size:large;"> Your own sophisticated low brow blues lick-laden, fuzz-covered, Appalachian soul-powered, original rock & roll guitar/drums duo. <br><br> Award-winning songwriting. </p>
 
 <h3 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:georgia; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR DATES</h3>
 <p style="color:white; text-align:center; margin-top:-20px; padding-bottom:25px;">(coming soon)</p>
