--- a/Lyrics/hereigoagainonmyown.html
+++ b/Lyrics/hereigoagainonmyown.html
@@ -17,9 +17,8 @@ Here I go again, here I go again<br>
 Though I keep searching for an answer<br>
 I never seem to find what I'm looking for<br>
 Oh, Lord, I pray you give me strength to carry on<br>
-… 'Cause I know what it means<br>
+'Cause I know what it means<br>
 To walk along the lonely street of dreams<br><br>
-…
 </p>
 <p>  <h2>Chorus</h2><br>
 Here I go again on my own<br>
@@ -32,9 +31,8 @@ I ain't wasting no more time<br>
 I'm just another heart in need of rescue<br>
 Waiting on love's sweet charity<br>
 And I'm gonna hold on for the rest of my days<br>
-… 'Cause I know what it means<br>
+'Cause I know what it means<br>
 To walk along the lonely street of dreams<br><br>
-…
 </p>
 <p><h2>Chorus</h2><br>
 And here I go again on my own<br>
@@ -44,13 +42,14 @@ And I've made up my mind<br>
 I ain't wasting no more time<br>
 </p>
 <p>
+
+<h2>Bridge</h2>  
 But here I go again<br>
 … Here I go again<br>
 Here I go again<br>
 Here I go<br>
 … 'Cause I know what it means<br>
 To walk along the lonely street of dreams<br><br>
-…
 </p>
 <p><h2>Chorus</h2><br>
 And here I go again on my own<br>
