--- a/Lyrics/hereigoagainonmyown.html
+++ b/Lyrics/hereigoagainonmyown.html
@@ -45,10 +45,10 @@ I ain't wasting no more time<br>
 
 <h2>Bridge</h2>  
 But here I go again<br>
-… Here I go again<br>
+Here I go again<br>
 Here I go again<br>
 Here I go<br>
-… 'Cause I know what it means<br>
+'Cause I know what it means<br>
 To walk along the lonely street of dreams<br><br>
 </p>
 <p><h2>Chorus</h2><br>
