--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -23,7 +23,7 @@
 <img alt=Ivan_Dogwood src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
   </a>
 
-<a href="https://cash.app/$ivandogwood">
+<a href="https://cash.app/p/ct5gmxmad4ivve7jq0sjksouj">
 <img alt=ivan_dogwood_cashapp style="padding-top:20px; display:block; margin:auto;width:210px;" src="82366345-18F7-4A2B-8747-36AB81FDCFF1.jpeg"></img>
 </a>
 
