--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
   <title>The Outlaw Red Ivan Dogwood</title>
 
 <link href="https://fonts.cdnfonts.com/css/academy-engraved-let" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
   <!-- 
   <link rel="stylesheet" href="css/themes/slim.css">
@@ -21,7 +18,7 @@
  --->
 <body style="background-color:black">
 <img alt="Ivan Dogwood" src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
-<p style="margin-top:42px;text-align: center;color:white;font-family:special elite;font-size:large; padding-bottom:21px;"> Your own sophisticated low brow blues lick-laden, fuzz-covered, Appalachian soul-powered, original rock & roll guitar/drums duo. <br><br> Award-winning songwriting. </p>
+<p style="margin-top:42px;text-align: center;color:white;font-family:american engraved let;font-size:large; padding-bottom:21px;"> Your own sophisticated low brow blues lick-laden, fuzz-covered, Appalachian soul-powered, original rock & roll guitar/drums duo. <br><br> Award-winning songwriting. </p>
 
 
 <audio controls title="Scott Co Blues"style="display:block; margin:auto;border:outset 4px lightgray; border-radius:15px">
@@ -31,7 +28,7 @@ Your browser does not support the audio element.
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
   <h3 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:georgia; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR DATES</h3>
-<p style="color:white; text-align:center; margin-top:-20px; padding-bottom:5px;">(coming soon)</p>
+<p style="color:white; text-align:center; margin-top:-20px; padding-bottom:0px;">(coming soon)</p>
 
   
 
