--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  --->
 <body style="background-color:black">
 <img alt="Ivan Dogwood" src="805A933C-8E22-4FE5-8690-7FEAF0BBEB66.gif" style="width:80%;margin-left:10%;margin-top:10%;"></img>
-<p style="margin-top:42px;text-align: center;color:white;font-family:american engraved let;font-size:large; padding-bottom:21px;"> Your own sophisticated low brow blues lick-laden, fuzz-covered, Appalachian soul-powered, original rock & roll guitar/drums duo. <br><br> Award-winning songwriting. </p>
+<p style="margin-top:42px;text-align: center;color:white;font-family:American Engraved LET;font-size:larger; padding-bottom:21px;"> Your own sophisticated low brow blues lick-laden, fuzz-covered, Appalachian soul-powered, original rock & roll guitar/drums duo. <br><br> Award-winning songwriting. </p>
 
 
 <audio controls title="Scott Co Blues"style="display:block; margin:auto;border:outset 4px lightgray; border-radius:15px">
@@ -33,7 +33,7 @@ Your browser does not support the audio element.
   
 
 <a href="outlawkaraoke.html">
-  <h3 style="display:block; margin:auto; text-align:center; font-size:23px; padding:33px; font-family:academy engraved let; color:lavenderblush;">CashApp Karaoke</h3>
+  <h3 style="display:block; margin:auto; text-align:center; font-size:23px; padding:27px; font-family:academy engraved let; color:lavenderblush;">CashApp Karaoke</h3>
 </a>
 
 
