--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -34,7 +34,7 @@
 
   
   <!--- Karaoke Songs List --->
-<div style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px;" >
+<div style="display:block; margin:auto; padding-top: 10px; font-family:academy engraved let;font-size: 18px;" >
   
      <a href="/Lyrics/likearollingstone.html">
     <p style="padding-top: 33px; color:white;">Like A Rolling Stone - Bob Dylan</p>
