--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -9,8 +9,6 @@
   <title>The Outlaw Red Ivan Dogwood</title>
 
   
-<link href="https://fonts.cdnfonts.com/css/academy-engraved-let" rel="stylesheet">
-
 <style>
   background-color:black;
 </style>
@@ -34,7 +32,7 @@
 
   
   <!--- Karaoke Songs List --->
-<div style="display:block; margin:auto; padding-top: 10px; font-family:academy engraved let;font-size: 18px;" >
+<div style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px;" >
   
      <a href="/Lyrics/likearollingstone.html">
     <p style="padding-top: 33px; color:white;">Like A Rolling Stone - Bob Dylan</p>
