--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Your browser does not support the audio element.
 </audio>
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
-  <h3 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:georgia; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR DATES</h3>
+  <h3 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:georgia; text-shadow: 0px 1px 0px red;"> '23 BREW & TAPHOUSE TOUR DATES</h3>
 <p style="color:white; text-align:center; margin-top:-20px; padding-bottom:0px;">(coming soon)</p>
 
   
