--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -58,6 +58,9 @@
      <p style="color:white;">Here I Go Again On My Own - Whitesnake</p>
      </a>
 
+   <a href="/Lyrics/strawberrywine.html">
+     <p style="color:white;">Strawberry Wine - Deana Carter</p>
+     </a>
 
 </div>
 
