--- a/Lyrics/strawberrywine.html
+++ b/Lyrics/strawberrywine.html
@@ -6,6 +6,7 @@
 <body style="background-color:black; color:aliceblue; font-size:large;">
 <h1>Strawberry Wine</h1>
 <p>
+<h3>Verse 1</h3>
 He was working through college<br>
 On my grandpa's farm<br>
 I was thirsting for knowledge<br>
@@ -22,6 +23,7 @@ Green on the vine<br>
 Like strawberry wine<br>
 </p>
 <p>
+  <h3>Verse 2</h3>
 I still remember<br>
 When thirty was old<br>
 And my biggest fear was September<br>
@@ -29,8 +31,8 @@ when he had to go<br>
 A few cards and letters and one long distance call<br>
 We drifted away like the leaves in the fall<br>
 But year after year I come back to this place<br>
-Just to remember the taste<br><br>
-  <h2>Chorus</h2><br>
+Just to remember the taste<br>
+  <h2>Chorus</h2>
 Of strawberry wine and seventeen<br>
 The hot July moon saw everything<br>
 My first taste of love, whoa-oh, bittersweet<br>
@@ -38,14 +40,14 @@ Green on the vine<br>
 Like strawberry wine<br><br>
 </p>
 <p>
-  <h2>Bridge</h2><br>
+  <h2>Bridge</h2>
 The fields have grown over now<br>
 Years since they've seen the plow<br>
 There's nothing time hasn't touched<br>
 Is it really him or the loss of my innocence?<br>
 I've been missing so much<br>
 Yeah<br>
-  <h2>Chorus</h2><br>
+  <h2>Chorus</h2>
 Strawberry wine and seventeen<br>
 The hot July moon saw everything<br>
 My first taste of love, whoa-oh bittersweet<br>
