--- a/Lyrics/strawberrywine.html
+++ b/Lyrics/strawberrywine.html
@@ -15,7 +15,7 @@ Yeah, I was caught somewhere between a woman and a child<br>
 One restless summer we found love growing wild<br>
 On the banks of the river on a well beaten path<br>
 It's funny how those memories they last<br>
-  <br><h2>Chorus</h2><br>
+  <br><h2>Chorus</h2>
 Like strawberry wine and seventeen<br>
 The hot July moon saw everything<br>
 My first taste of love, oh bittersweet<br>
