--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@ Your browser does not support the audio element.
 </audio>
 <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Live) Scott Co. Blues</p>
 
+
+  <a href="webcal://p103-caldav.icloud.com/published/2/NTgxNTU0OTQxNTgxNTU0ORBUUR7ngU63Ez0eFPDA0cHODnhEDZTUJkquVezftOOchPdlWupNT6kiSIkQ5CQEahKAkUG0yiwrkWLHfwe_dxs">
   <h3 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:georgia; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR DATES</h3>
-<p style="color:white; text-align:center; margin-top:-20px; padding-bottom:0px;">Aug 26th @ 7pm - Damascus Brewery, Damascus VA</p>
+    <\a>
+<p style="color:white; padding-top:10px; text-align:center; margin-top:-20px; padding-bottom:0px;">Aug 26th @ 7pm - Damascus Brewery, Damascus VA</p>
 
   
 
