--- a/Lyrics/dirtywoman.html
+++ b/Lyrics/dirtywoman.html
@@ -15,12 +15,14 @@
     Where are all the good times?
     <br>
     Who's gonna show this stranger around?
-    <br><b>Chorus</b>
+    <br><br>
+    <b>Chorus</b>
     Ooh, I need a dirty woman
     <br>
     Ooh, I need a dirty girl
     <br>
-    <br><b>Verse 2</b>
+    <br><br>
+    <b>Verse 2</b>
     Will some woman in this desert land
     <br>
     Make me feel like a real man?
