--- a/Lyrics/dirtywoman.html
+++ b/Lyrics/dirtywoman.html
@@ -17,12 +17,14 @@
     Who's gonna show this stranger around?
     <br><br>
     <b>Chorus</b>
+    <br>
     Ooh, I need a dirty woman
     <br>
     Ooh, I need a dirty girl
     <br>
     <br><br>
     <b>Verse 2</b>
+    <br>
     Will some woman in this desert land
     <br>
     Make me feel like a real man?
@@ -30,7 +32,8 @@
     Take this rock and roll refugee
     <br>
     Ooh, baby set me free
-    <br><b>Chorus</b>
+    <br><br><b>Chorus</b>
+    <br>
     Ooh, I need a dirty woman
     <br>
     Ooh, I need a dirty girl
