--- a/Lyrics/igotafeeling.html
+++ b/Lyrics/igotafeeling.html
@@ -57,7 +57,7 @@
     I've got a feeling, yeah
     <br>
     I've got a feeling
-    <br> <b>Bridge</b>
+    <br> <b>Bridge</b><br>
     All these years, I've been wanderin' around
     <br>
     Wonderin' how come nobody told me
