--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Your browser does not support the audio element.
   </a>
 <p style="color:white; padding-top:5px; text-align:center; margin-top:-20px; padding-bottom:0px;">Aug 26th - 7pm @ Damascus Brewery, Damascus VA
 <br>
-Sept 3rd - 3pm (On Air) @ WEHC 90.7 on Appalachian Artists </p>
+Sept 3rd @ 3pm On Air @ WEHC 90.7 on Appalachian Artists </p>
 
   
 
