--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ Your browser does not support the audio element.
   <a href="webcal://p103-caldav.icloud.com/published/2/NTgxNTU0OTQxNTgxNTU0ORBUUR7ngU63Ez0eFPDA0cHODnhEDZTUJkquVezftOOchPdlWupNT6kiSIkQ5CQEahKAkUG0yiwrkWLHfwe_dxs">
   <h3 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:georgia; text-shadow: 0px 1px 0px red;"> '23 BREW & TAP  TOUR DATES</h3>
   </a>
-<p style="color:white; padding-top:5px; text-align:center; margin-top:-20px; padding-bottom:0px;">Aug 26th | 7pm @ Damascus Brewery, Damascus VA
+<p style="color:white; padding-top:5px; text-align:center; margin-top:-20px; padding-bottom:0px;"><bold>Aug 26th ~ 7pm |</bold> @ Damascus Brewery, Damascus VA
 <br>
-Sept 3rd | 3pm (On Air) @ WEHC 90.7 on Appalachian Artists </p>
+<bold>Sept 3rd @ 3pm |</bold>(On Air) @ WEHC 90.7 Appalachian Artists </p>
 
   
 
