--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Your browser does not support the audio element.
   </a>
 <p style="color:white; padding-top:5px; text-align:center; margin-top:-20px; padding-bottom:0px;"><bold>Aug 26th @ 7pm |</bold> Damascus Brewery, Damascus VA
 <br>
-<bold>Sept 3rd @ 3pm |</bold>(On Air) WEHC 90.7 Appalachian Artists </p>
+<bold>Sept 3rd @ 3pm |</bold>📶WEHC 90.7 Appalachian Artists </p>
 
   
 
