--- a/assets.html
+++ b/assets.html
@@ -25,7 +25,7 @@
   </a>
 
 
-<img src="0DD01ADE-D956-40D2-8926-58F7BD6FA340.gif" style="padding:5px"></img>
+<img src="D520FD9A-976F-42C9-8CBB-840A5686C50E.jpeg" style="padding:5px"></img>
   <img src="36ACBFF0-AC1E-44AF-A57C-146C53643963.gif" style="padding:5px"></img>
   <img src="B465E9FC-2C45-49E3-877D-2C39574C29CF.gif" style="padding:5px"></img>
   <img src="AB3E710A-8550-4824-A20D-571B33A1D5C6.gif" style="padding:5px"></img>
