--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -51,7 +51,7 @@
      </a>
   
       <a href="/Lyrics/dirtywoman.html">
-     <p style="color:white;">Dirty Woman - Pink Floyd</p>
+     <p style="color:white;">Young Lust - Pink Floyd</p>
      </a>
 
   <a href="/Lyrics/hereigoagainonmyown.html">
