--- a/Lyrics/dirtywoman.html
+++ b/Lyrics/dirtywoman.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dirty Woman</title>
+  <title>Young Lust</title>
 </head>
 <body style="background-color:black;color:aliceblue;font-size:large;">
-  <h1>Dirty Woman</h1>
+  <h1>Young Lust</h1>
   <p>
     <b>Verse 1</b>
     <br>
