--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -54,8 +54,8 @@
      <p style="color:white;">Young Lust - Pink Floyd</p>
      </a>
 
-  <a href="/Lyrics/hereigoagainonmyown.html">
-     <p style="color:white;">Here I Go Again On My Own - Whitesnake</p>
+  <a href="/Lyrics/hereigoagain.html">
+     <p style="color:white;">Here I Go Again - Whitesnake</p>
      </a>
 
    <a href="/Lyrics/strawberrywine.html">
