--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -66,6 +66,10 @@
      <p style="color:white;">Round Here - Counting Crows</p>
      </a>
   
+  <a href="/Lyrics/kerosene.html">
+     <p style="color:white;">Kerosene - Miranda Lambert</p>
+     </a>
+  
 </div>
 
 
