--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -29,7 +29,7 @@
 </a>
 
 
-<h3>Wanna sing a song on stage with Ivan Dogwood? Yea? Let's du-et! Just pick your song and send $5 to $ivandogwood to enter the raffle! We'll choose a winner at random during our 2nd set.  </h3>
+<h3>Wanna sing a song on stage with Ivan Dogwood? Yea? Let's du-et! Just pick your song from the list below and send $5 to $ivandogwood to enter the raffle! We'll draw the winner during our 2nd set.  </h3>
   
   <!--- Karaoke Songs List --->
 <div style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px;" >
