--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -12,6 +12,7 @@
 <style>
   background-color:black;
 </style>
+<link href="https://fonts.cdnfonts.com/css/academy-engraved-let" rel="stylesheet">
 
 </head>
   <!-- 
@@ -29,7 +30,7 @@
 </a>
 
 
-<h3>Wanna sing karaoke on stage with Ivan Dogwood? Yea? Let's du-et! Just pick your song from the list below and send $5 to $ivandogwood on CashApp to enter the raffle. We'll pick the winner using a random generator during our 2nd set!  </h3>
+<h3 style="color:seagreen; font-family:academy-engraved-let;>Wanna sing karaoke on stage with Ivan Dogwood? Yea? Let's du-et! Just pick your song from the list below and send $5 to $ivandogwood on CashApp to enter the raffle. We'll pick the winner using a random generator during our 2nd set!  </h3>
   
   <!--- Karaoke Songs List --->
 <div style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px;" >
