--- a/outlawkaraoke.html
+++ b/outlawkaraoke.html
@@ -30,7 +30,7 @@
 </a>
 
 
-<h3 style="color:seagreen; font-family:academy-engraved-let;">Wanna sing on stage with Ivan Dogwood? Yea?! Let's du-et!  Pick your song from the list below and send $5 to $ivandogwood on CashApp to enter the raffle. We'll pick one winner using a random generator during our 2nd set! </h3>
+<h3 style="color:seagreen; font-family:academy-engraved-let;">Wanna sing on-stage with Ivan Dogwood as your backing band? Yea?! Let's du-et!  Pick a song from the list below and send $5 to $ivandogwood on CashApp to enter the raffle. We'll pick one winner using a random generator during our 2nd set! </h3>
   
   <!--- Karaoke Songs List --->
 <div style="display:block; margin:auto; padding-top: 10px; font-family:times new roman;font-size: 18px;" >
@@ -67,8 +67,8 @@
      <p style="color:white;">Round Here - Counting Crows</p>
      </a>
   
-  <a href="/Lyrics/kerosene.html">
-     <p style="color:white;">Kerosene - Miranda Lambert</p>
+  <a href="/Lyrics/valerie.html">
+     <p style="color:white;">Valerie - The Zutons</p>
      </a>
   
 </div>
