--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Your browser does not support the audio element.
   
 
 <a href="outlawkaraoke.html">
-  <h3 style="display:block; margin:auto; text-align:center; font-size:23px; padding:27px; font-family:academy engraved let; color:lavenderblush;">CashApp Karaoke</h3>
+  <h3 style="display:block; margin:auto; text-align:center; font-size:23px; padding:27px; font-family:academy engraved let; color:black;">CashApp Karaoke</h3>
 </a>
 
 
