--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ Your browser does not support the audio element.
 
   
 
-<a href="outlawkaraoke.html">
-  <h3 style="display:block; margin:auto; text-align:center; font-size:23px; padding:27px; font-family:academy engraved let; color:black;">CashApp Karaoke</h3>
-</a>
+<!-- <a href="outlawkaraoke.html"> 
+  <h3 style="display:block; margin:auto; text-align:center; font-size:23px; padding:27px; font-family:academy engraved let; color:lavender;">CashApp Karaoke</h3>
+</a> -->
 
 
   
