--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Your browser does not support the audio element.
 
 
   <a href="webcal://p103-caldav.icloud.com/published/2/NTgxNTU0OTQxNTgxNTU0ORBUUR7ngU63Ez0eFPDA0cHODnhEDZTUJkquVezftOOchPdlWupNT6kiSIkQ5CQEahKAkUG0yiwrkWLHfwe_dxs">
-  <h3 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:georgia; text-shadow: 0px 1px 0px red;"> 2023 TOUR DATES</h3>
+  <h3 style="text-align:center; color:gray; padding-top:25px; text-decoration: overline; font-family:georgia; text-shadow: 0px 1px 0px red;"> 2023 🆔 LIVE TOUR DATES</h3>
   </a>
 <p style="color:white; padding-top:5px; text-align:center; margin-top:-20px; padding-bottom:0px;"><bold>Aug 26th @ 7pm |</bold> Damascus Brewery, Damascus VA
 <br>
