--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <source src="Little Sadie.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-<a src=Little Sadie.mp3 style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Single) Little Sadie</a>
+<a href=https://ivandogwood.red/Little Sadie.mp3>
+  <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Single) Little Sadie</p>
+</a>
 
   
 <audio controls title="Scott Co Blues"style="display:block; margin:auto;border:outset 4px lightgray; border-radius:15px">
