--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <source src="Little Sadie.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-<a href=https://ivandogwood.red/Little Sadie.mp3>
-  <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;">(Single) Little Sadie<br>Download</p>
+<a href=https://github.com/ColinRitman/torid/raw/master/Little%20Sadie.mp3>
+  <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;padding-bottom:10px">(Single) Little Sadie<br>Download</p>
 </a>
 
   
