--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 Your browser does not support the audio element.
 </audio>
 <a href=https://github.com/ColinRitman/torid/raw/master/Little%20Sadie.mp3>
-  <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;padding-bottom:10px">(Single) Little Sadie<br>Download</p>
+  <p style="color:antiquewhite; font-size:small;text-align:center;font-family:copperplate;margin-top:auto;padding-bottom:10px;">(Single) Little Sadie<br>Download</p>
 </a>
 
   
